--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,69 @@
     <title>Car Rental</title>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a href="#" class="navbar-brand">Car<b>RENTAL</b></a>  		
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collection of nav links, forms, and other content for toggling -->
+      <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+        <div class="navbar-nav">
+          <a href="#" class="nav-item nav-link">Home</a>
+          <a href="#" class="nav-item nav-link">Rent</a>			
+          <a href="#" class="nav-item nav-link">About Us</a>
+          <a href="#" class="nav-item nav-link">Contact</a>
+        </div>
+        <div class="navbar-nav ml-auto action-buttons">
+          <div class="nav-item dropdown">
+            <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle mr-4">Login</a>
+                    <div class="dropdown-menu action-form">
+              <form action="/examples/actions/confirmation.php" method="post">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Username" required="required">
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Password" required="required">
+                </div>
+                <input type="submit" class="btn btn-primary btn-block" value="Login">
+                <div class="text-center mt-2">
+                  <a href="#">Forgot Your password?</a>
+                </div>
+              </form>
+                    </div>
+          </div>
+          <div class="nav-item dropdown">
+            <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn">Sign up</a>
+                    <div class="dropdown-menu action-form">
+              <form action="/examples/actions/confirmation.php" method="post">
+                <p class="hint-text">Fill in this form to create your account!</p>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Username" required="required">
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Password" required="required">
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Confirm Password" required="required">
+                </div>
+                <div class="form-group">
+                  <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms &amp; Conditions</a></label>
+                </div>
+                <input type="submit" class="btn btn-primary btn-block" value="Sign up">
+              </form>
+            </div>
+          </div>
+            </div>
+      </div>
+    </nav>
+
+    <section class="header">
+      <h1 class="heading-title">RENT YOUR CAR NOW</h1>
+      <a href=""><button>Rent</button></a>
+    </section>
+
+
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
