add section header

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,15 @@
       </div>
     </nav>
 
-    
+    <section class="header">
+      <div class="text-center">
+        <h1 class="heading-title pt-5">RENT YOUR CAR NOW</h1>
+        <a href=""><button class="mt-5 button-primary">Rent</button></a>
+      </div>
+      <div class="img-container">
+        <img class="hero-img" src="/src/img/hero-car.png" alt="car">
+      </div>
+    </section>
 
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
