--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/tt-norms-medium" type="text/css"/>
     <title>Car Rental</title>
   </head>
   <body>
@@ -71,12 +72,28 @@
     </nav>
 
     <section class="header">
-      <div class="text-center">
+      <div class="text-center container">
         <h1 class="heading-title pt-5">RENT YOUR CAR NOW</h1>
-        <a href=""><button class="mt-5 button-primary">Rent</button></a>
+        <h3 class="mt-5">The fastest service</h3>
+        <a href=""><button class="mt-5 mb-5 button-primary">Rent</button></a>
       </div>
-      <div class="img-container">
+      <div class="img-container text-center">
         <img class="hero-img" src="/src/img/hero-car.png" alt="car">
+      </div>
+    </section>
+
+    <section class="about-us">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis egestas in diam fermentum, vel tristique sagittis elementum.</p>
+            <a href=""><button></button></a>
+          </div>
+          <div class="col">
+            
+          </div>
+        </div>
       </div>
     </section>
 
