--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,12 @@
 
     <section class="header">
       <div class="text-center container">
-        <h1 class="heading-title pt-5">RENT YOUR CAR NOW</h1>
-        <h3 class="mt-5">The fastest service</h3>
+        <h1 class="heading-title pt-5">
+          <span class="letters letters-1">Ready</span>
+          <span class="letters letters-2">Set</span>
+          <span class="letters letters-3">Go!</span>
+        </h1>
+        <h3 class="mt-5">RENT YOUR CAR NOW</h3>
         <a href=""><button class="mt-5 mb-5 button-primary">Rent</button></a>
       </div>
       <div class="img-container text-center">
@@ -96,8 +100,8 @@
         </div>
       </div>
     </section>
-
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -114,5 +118,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="/src/index.js"></script>
   </body>
 </html>
