--- a/src/index.html
+++ b/src/index.html
@@ -71,18 +71,22 @@
       </div>
     </nav>
 
+
+    <!-- Hero section -->
+
     <section class="header">
-      <div class="text-center container">
+      <div class="text-center container hero-text">
         <h1 class="heading-title pt-5">
           <span class="letters letters-1">Ready</span>
           <span class="letters letters-2">Set</span>
           <span class="letters letters-3">Go!</span>
+          <div class="spacer"></div>
         </h1>
-        <h3 class="mt-5">RENT YOUR CAR NOW</h3>
+        <h3 class="hero-subtitle">RENT YOUR CAR NOW</h3>
         <a href=""><button class="mt-5 mb-5 button-primary">Rent</button></a>
       </div>
       <div class="img-container text-center">
-        <img class="hero-img" src="/src/img/hero-car.png" alt="car">
+        <img class="hero-img" src="/src/img/hero car white 1.png" alt="car">
       </div>
     </section>
 
