modified button, typography

--- a/src/index.html
+++ b/src/index.html
@@ -83,23 +83,26 @@
           <div class="spacer"></div>
         </h1>
         <h3 class="hero-subtitle">RENT YOUR CAR NOW</h3>
-        <a href=""><button class="mt-5 mb-5 button-primary">Rent</button></a>
+        <a href="#"><button class="mt-5 mb-5 button-primary">Rent</button></a>
       </div>
       <div class="img-container text-center">
         <img class="hero-img" src="/src/img/hero car white 1.png" alt="car">
       </div>
     </section>
 
+
+    <!-- about us section -->
+
     <section class="about-us">
-      <div class="container">
+      <div class="container about-container">
         <div class="row">
-          <div class="col">
-            <h1></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis egestas in diam fermentum, vel tristique sagittis elementum.</p>
-            <a href=""><button></button></a>
+          <div class="col-md-6 col-12">
+            <h1 class="title">About Us</h1>
+            <p class="paragraph mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis egestas in diam fermentum, vel tristique sagittis elementum.</p>
           </div>
-          <div class="col">
-            
+          <div class="col-md-6 col-12">
+            <h1 class="title">About Us</h1>
+            <p class="paragraph mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis egestas in diam fermentum, vel tristique sagittis elementum.</p>
           </div>
         </div>
       </div>
