tariffs section with cards

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,46 @@
         </div>
       </div>
     </section>
+
+    <!-- tariffs section -->
+
+    <section class="tariffs mt-5">
+      <div class="container">
+        <h1 class="title text-center mb-5">Our Tariffs</h1>
+        <div class="row card-row">
+          <div class="col-lg-4 col-12 card-container">
+            <div class="price-card text-center">
+              <div class="img-container">
+                <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+              </div>
+              <h4 class="mt-5 card-title">Economy</h4>
+              <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
+              <h2 class="mt-4 card-tariff">From 10$</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-12 card-container">
+            <div class="price-card text-center">
+              <div class="img-container">
+                <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+              </div>
+              <h4 class="mt-5 card-title">Standard</h4>
+              <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
+              <h2 class="mt-4 card-tariff">From 10$</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-12 card-container">
+            <div class="price-card text-center">
+              <div class="img-container">
+                <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+              </div>
+              <h4 class="mt-5 card-title">Business</h4>
+              <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
+              <h2 class="mt-4 card-tariff">From 10$</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
