--- a/src/index.html
+++ b/src/index.html
@@ -115,33 +115,88 @@
         <h1 class="title text-center mb-5">Our Tariffs</h1>
         <div class="row card-row">
           <div class="col-lg-4 col-12 card-container">
-            <div class="price-card text-center">
-              <div class="img-container">
-                <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+            <a href="#">
+              <div class="price-card text-center">
+                <div class="img-container">
+                  <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+                </div>
+                <h4 class="mt-5 card-title">Economy</h4>
+                <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
+                <h2 class="mt-4 card-tariff">From 10$</h2>
               </div>
-              <h4 class="mt-5 card-title">Economy</h4>
-              <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
-              <h2 class="mt-4 card-tariff">From 10$</h2>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-12 card-container">
-            <div class="price-card text-center">
-              <div class="img-container">
-                <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+            <a href="#">
+              <div class="price-card text-center">
+                <div class="img-container">
+                  <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+                </div>
+                <h4 class="mt-5 card-title">Standard</h4>
+                <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
+                <h2 class="mt-4 card-tariff">From 10$</h2>
               </div>
-              <h4 class="mt-5 card-title">Standard</h4>
-              <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
-              <h2 class="mt-4 card-tariff">From 10$</h2>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-12 card-container">
-            <div class="price-card text-center">
-              <div class="img-container">
-                <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+            <a href="#">
+              <div class="price-card text-center">
+                <div class="img-container">
+                  <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+                </div>
+                <h4 class="mt-5 card-title">Business</h4>
+                <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
+                <h2 class="mt-4 card-tariff">From 10$</h2>
               </div>
-              <h4 class="mt-5 card-title">Business</h4>
-              <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
-              <h2 class="mt-4 card-tariff">From 10$</h2>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- section offer -->
+
+    <section class="offer mt-5">
+      <div class="container">
+        <h1 class="title text-center mb-5">What we offer</h1>
+        <div class="row">
+          <div class="col-lg-6 col-12 offer-container">
+            <div class="img-container">
+              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+            </div>
+            <div class="text-container-offer">
+              <h4 class="offer-title">Lorem Ipsum</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12 offer-container">
+            <div class="img-container">
+              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+            </div>
+            <div class="text-container-offer">
+              <h4 class="offer-title">Lorem Ipsum</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-6 col-12 offer-container">
+            <div class="img-container">
+              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+            </div>
+            <div class="text-container-offer">
+              <h4 class="offer-title">Lorem Ipsum</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12 offer-container">
+            <div class="img-container">
+              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+            </div>
+            <div class="text-container-offer">
+              <h4 class="offer-title">Lorem Ipsum</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
         </div>
