modifications index html

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
               </form>
             </div>
           </div>
-            </div>
+        </div>
       </div>
     </nav>
 
@@ -86,7 +86,7 @@
         <a href="#"><button class="mt-5 mb-5 button-primary">Rent</button></a>
       </div>
       <div class="img-container text-center">
-        <img class="hero-img" src="/src/img/hero car white 1.png" alt="car">
+        <img class="hero-img" src="/img/hero car white 1.png" alt="car">
       </div>
     </section>
 
@@ -118,7 +118,7 @@
             <a href="#">
               <div class="price-card text-center">
                 <div class="img-container">
-                  <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+                  <img class="card-image" src="/img/hero car white 1.png" alt="">
                 </div>
                 <h4 class="mt-5 card-title">Economy</h4>
                 <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
@@ -130,7 +130,7 @@
             <a href="#">
               <div class="price-card text-center">
                 <div class="img-container">
-                  <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+                  <img class="card-image" src="/img/hero car white 1.png" alt="">
                 </div>
                 <h4 class="mt-5 card-title">Standard</h4>
                 <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
@@ -142,7 +142,7 @@
             <a href="#">
               <div class="price-card text-center">
                 <div class="img-container">
-                  <img class="card-image" src="/src/img/hero car white 1.png" alt="">
+                  <img class="card-image" src="/img/hero car white 1.png" alt="">
                 </div>
                 <h4 class="mt-5 card-title">Business</h4>
                 <p class="mt-4 card-text">lorem ipsum lorem ipsum lorem ipsum</p>
@@ -163,7 +163,7 @@
         <div class="row">
           <div class="col-lg-6 col-12 offer-container">
             <div class="img-container">
-              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+              <img class="offer-icon" src="/img/icon-offer-1.png" alt="">
             </div>
             <div class="text-container-offer">
               <h4 class="offer-title">Lorem Ipsum</h4>
@@ -172,7 +172,7 @@
           </div>
           <div class="col-lg-6 col-12 offer-container">
             <div class="img-container">
-              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+              <img class="offer-icon" src="/img/icon-offer-1.png" alt="">
             </div>
             <div class="text-container-offer">
               <h4 class="offer-title">Lorem Ipsum</h4>
@@ -183,7 +183,7 @@
         <div class="row mt-5">
           <div class="col-lg-6 col-12 offer-container">
             <div class="img-container">
-              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+              <img class="offer-icon" src="/img/icon-offer-1.png" alt="">
             </div>
             <div class="text-container-offer">
               <h4 class="offer-title">Lorem Ipsum</h4>
@@ -192,7 +192,7 @@
           </div>
           <div class="col-lg-6 col-12 offer-container">
             <div class="img-container">
-              <img class="offer-icon" src="/src/img/icon-offer-1.png" alt="">
+              <img class="offer-icon" src="/img/icon-offer-1.png" alt="">
             </div>
             <div class="text-container-offer">
               <h4 class="offer-title">Lorem Ipsum</h4>
@@ -202,6 +202,67 @@
         </div>
       </div>
     </section>
+
+
+    <!-- section testimonials -->
+    <section class="testimonials mt-5">
+      <div class="container testimonial-carousel">
+        <h2 class="title text-center">Discover why to chose us</h2>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="carousel-content">
+                <p class="paragraph">
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <h2 class="text-center client-name-carousel">
+                  Anna Kowalski
+                </h2>
+                <p class="text-center paragraph">
+                  Lorem ipsum Lorem ipsum Lorem ipsum
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <p class="paragraph">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+              </p>
+              <h2 class="text-center client-name-carousel">
+                Anna Kowalski
+              </h2>
+              <p class="text-center paragraph">
+                Lorem ipsum Lorem ipsum Lorem ipsum
+              </p>
+            </div>
+            <div class="carousel-item">
+              <p class="paragraph">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+              </p>
+              <h2 class="text-center client-name-carousel">
+                Anna Kowalski
+              </h2>
+              <p class="text-center paragraph">
+                Lorem ipsum Lorem ipsum Lorem ipsum
+              </p>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </section>
+    
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
@@ -220,6 +281,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="/src/index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
