add margin-top to footer

--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small blue pt-4" data-aos="fade-up" data-aos-delay="100" data-aos-duration="600">
+    <footer class="page-footer font-small blue pt-4 mt-5" data-aos="fade-up" data-aos-delay="100" data-aos-duration="600">
     
       <!-- Footer Links -->
       <div class="container-fluid text-center text-md-left">
