In progress auth

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                       type="email"
                       class="form-control"
                       placeholder="Email"
-                      required="required"
+                      required
                     />
                   </div>
                   <div class="form-group">
@@ -67,7 +67,7 @@
                       type="password"
                       class="form-control"
                       placeholder="Password"
-                      required="required"
+                      required
                     />
                   </div>
                   <input
@@ -75,11 +75,12 @@
                     class="btn btn-primary btn-block"
                     value="Login"
                   />
+
                   <div class="text-center mt-2">
                     <a href="#">Forgot Your password?</a>
                   </div>
                 </form>
-                <p name="login" class="paragraph" ></p>
+                <p name="login" class="paragraph"></p>
               </div>
             </div>
             <div class="nav-item dropdown">
@@ -100,7 +101,7 @@
                       type="email"
                       class="form-control"
                       placeholder="Email"
-                      required="required"
+                      required
                     />
                   </div>
                   <div class="form-group">
@@ -109,7 +110,7 @@
                       type="password"
                       class="form-control"
                       placeholder="Password"
-                      required="required"
+                      required
                     />
                   </div>
                   <div class="form-group">
@@ -118,13 +119,13 @@
                       type="password"
                       class="form-control"
                       placeholder="Confirm Password"
-                      required="required"
+                      required
                     />
                   </div>
                   <div class="form-group">
-                    <label class="form-check-label"
-                      ><input type="checkbox" required="required" /> I accept
-                      the <a href="#">Terms &amp; Conditions</a></label
+                    <label class="form-check-label">
+                      <input type="checkbox" required /> I accept the
+                      <a href="#">Terms &amp; Conditions</a></label
                     >
                   </div>
                   <input
@@ -133,8 +134,7 @@
                     value="Sign up"
                   />
                 </form>
-                <p name="signup" class="paragraph" ></p>
-
+                <p name="signup" class="paragraph"></p>
               </div>
             </div>
           </div>
