filter menu rent page

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         >
           <div class="navbar-nav">
             <a href="#" class="nav-item nav-link">Home</a>
-            <a href="#" class="nav-item nav-link">Rent</a>
+            <a href="rent.html" class="nav-item nav-link">Rent</a>
             <a href="#" class="nav-item nav-link">About Us</a>
             <a href="#" class="nav-item nav-link">Contact</a>
           </div>
@@ -473,7 +473,7 @@
                 <a href="#!">Home</a>
               </li>
               <li>
-                <a href="#!">Rent</a>
+                <a href="rent.html">Rent</a>
               </li>
               <li>
                 <a href="#!">About Us</a>
