--- a/src/rent.html
+++ b/src/rent.html
@@ -295,6 +295,70 @@
           </form>
         </div>
       </section>
+
+      <section class="cars mt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-12 mt-5 car-container">
+              <div class="car-card text-center pt-3 pb-3">
+                <div class="img-container">
+                  <img
+                    class="car-image"
+                    src="./img/opel-corsa.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="car-info mt-3">
+                  <h4 class="car-name">Opel Corsa</h4>
+                  <p class="car-type mt-3">Economy</p>
+                  <p class="car-price mt-3">90,11$</p>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="button-primary mt-3">Rent</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-12 mt-5 car-container">
+              <div class="car-card text-center pt-3 pb-3">
+                <div class="img-container">
+                  <img
+                    class="car-image"
+                    src="./img/opel-corsa.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="car-info mt-3">
+                  <h4 class="car-name">Opel Corsa</h4>
+                  <p class="car-type mt-3">Economy</p>
+                  <p class="car-price mt-3">90,11$</p>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="button-primary mt-3">Rent</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-12 mt-5 car-container">
+              <div class="car-card text-center pt-3 pb-3">
+                <div class="img-container">
+                  <img
+                    class="car-image"
+                    src="./img/opel-corsa.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="car-info mt-3">
+                  <h4 class="car-name">Opel Corsa</h4>
+                  <p class="car-type mt-3">Economy</p>
+                  <p class="car-price mt-3">90,11$</p>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="button-primary mt-3">Rent</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
