--- a/src/rent.html
+++ b/src/rent.html
@@ -352,7 +352,7 @@
                   <p class="car-price mt-3">90,11$</p>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="button-primary mt-3">Rent</button>
+                  <button type="submit" class="button-primary mt-3">Search</button>
                 </div>
               </div>
             </div>
