Add fetching and displaying cars

--- a/src/index.html
+++ b/src/index.html
@@ -124,8 +124,8 @@
                   </div>
                   <div class="form-group">
                     <label class="form-check-label">
-                      <input type="checkbox" required /> I accept the
-                      <a href="#">Terms &amp; Conditions</a></label
+                      <input type="checkbox" required />
+                      I accept the <a href="#">Terms &amp; Conditions</a></label
                     >
                   </div>
                   <input
@@ -200,7 +200,7 @@
           <h1 class="title text-center mb-5">Our Tariffs</h1>
           <div class="row card-row">
             <div class="col-lg-4 col-12 card-container">
-              <a href="#">
+              <a href="rent.html?type=economy">
                 <div class="price-card text-center">
                   <div class="img-container">
                     <img
@@ -218,7 +218,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-12 card-container">
-              <a href="#">
+              <a href="rent.html?type=standard">
                 <div class="price-card text-center">
                   <div class="img-container">
                     <img
@@ -236,7 +236,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-12 card-container">
-              <a href="#">
+              <a href="rent.html?type=business">
                 <div class="price-card text-center">
                   <div class="img-container">
                     <img
@@ -522,6 +522,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="./firebase.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
