--- a/src/rent.html
+++ b/src/rent.html
@@ -298,8 +298,7 @@
       </section>
 
       <section class="cars mt-5">
-        <div class="container" id="cars-cards-container">
-        </div>
+        <div class="container" id="cars-cards-container"></div>
       </section>
     </main>
 
